# 3commas-mcp

./: .gitignore  3COMMAS_MCP_MVP_PLAN.md  CLAUDE.md  README.md  TASKS.md  env.example  main.py  pyproject.toml
.claude/commands/: plan.md
.claude/commands/memory/: optimize.md
3commas_mcp/: __init__.py  server.py
3commas_mcp/api/: CLAUDE.md  __init__.py  client.py
3commas_mcp/tools/: CLAUDE.md  __init__.py
3commas_mcp/utils/: CLAUDE.md  __init__.py  auth.py  decorators.py  env.py
docs/: API_REFERENCE.md  API_REFERENCES.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  MVP_GET_APIS.md  PATTERNS.md  README.md
docs/conversations/: README.md  account-management-conversation.md  dca-bot-management-conversation.md  market-data-conversation.md
docs/models/: README.md  account.md  base.md  dca_bots.md  market_data.md
docs/tools/: README.md  account.md  dca_bots.md  market_data.md
scripts/: README.md  test_api.py  validate_endpoint.py
threecommas_mcp/: __init__.py  server.py
threecommas_mcp/api/: CLAUDE.md  __init__.py  client.py
threecommas_mcp/models/: AGENTS.md  CLAUDE.md  __init__.py  account.py  base.py  dca_bots.py  market_data.py
threecommas_mcp/tools/: AGENTS.md  CLAUDE.md  __init__.py  account.py  dca_bots.py  market_data.py
threecommas_mcp/utils/: AGENTS.md  CLAUDE.md  __init__.py  auth.py  decorators.py  env.py  response_filter.py
